--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     </div>
 
     <div id="whatsappMessage" class="hidden">
-        <h2>kalau hidupndu sedang tidak baik-baik saja, jangan sungkan buat cerita ke abang ya..</h2>
+        <h2>kalau hidupndu sedang tidak baik-baik saja dan butuh ruang untuk didengarkan, jangan pernah sungkan buat cerita ke abang ya..</h2>
         <button class="whatsapp-button" onclick="bukaWa()">Kirim Pesan</button>
         <button class="whatsapp-button" onclick="hideWhatsApp()">Kembali</button>
     </div>
