--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         </audio>
 
         <br>
-        <button onclick="showWhatsApp()">Kirim ke WhatsApp</button>
+        <button onclick="showWhatsApp()">Lanjut</button>
         <button onclick="hideVideoAndAudio()">Kembali</button>
     </div>
 
@@ -144,8 +144,9 @@ Tapi, perayaan kali ini bukan hanya sekedar perayaan angka, melainkan perayaan a
 Kam hebat bisa bertahan dan berdiri sendiri sampai sejauh ini. 
 Di usia ndu yang bertambah ini, sambutlah dengan penuh harapan dan juga sambutlah dengan penuh kebahagiaan. 
 Percayalah, banyak doa yang dipanjatkan untukndu agar kam selalu bertumbuh menjadi manusia yang lebih baik lagi, banyak doa yang mengharapkan agar kam tetap memancarkan cahaya kehangatan bagi orang-orang yang ada di sekitarndu, semoga keberkahan selalu menyertaindu dalam setiap langkah.
+Ingat, disini kami selalu ada untuk ndu. Bukan hanya disaat bahagia, melainkan disaat terpuruk ndu juga.
 
-Ingat, disini kami selalu ada untuk ndu. Bukan hanya disaat bahagia, melainkan disaat terpuruk ndu juga.`;
+Salam hangat dari abangmu, putraaa`;
 
         document.getElementById('wish').innerText = wish;
     }
