--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         const password = document.getElementById('password').value;
 
         // Ganti "PETANQUE" dengan password yang Anda inginkan
-        if (password === "PETANQUE") {
+        if (password === "123456") {
             document.getElementById('passwordInput').classList.add('hidden');
             document.getElementById('messageInput').classList.remove('hidden');
         } else {
