--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
 .page {
   display: none;
   text-align: center;
-  width: 90%;        /* lebar fleksibel */
-  max-width: 600px;  /* tidak terlalu lebar di laptop */
+  width: 100%;
+  max-width: 420px;  /* mirip ukuran HP portrait */
   margin: 0 auto;
   padding: 20px;
+  box-sizing: border-box;
 }
 
 .page.active {
@@ -30,8 +31,8 @@
 }
 
 input, button {
-  width: 90%;       /* fleksibel di HP */
-  max-width: 400px;
+  width: 90%;
+  max-width: 380px;
   padding: 12px;
   margin-top: 15px;
   font-size: 16px;
@@ -49,42 +50,23 @@ button:hover {
   background-color: #341f97;
 }
 
-/* Pesan animasi font */
+/* Font animasi */
 #fontText {
-  font-size: 6vw;  /* ukuran otomatis mengikuti lebar layar */
+  font-size: 6vw;  /* responsive mengikuti lebar layar */
   font-weight: bold;
   transition: font-family 0.2s ease-in-out, color 0.2s ease-in-out;
 }
 
-/* Video portrait 9:16 */
-#page5 video {
-  width: auto;
-  height: 70vh;
-  max-height: 80vh;
-  border-radius: 20px;
-  box-shadow: 0 4px 20px rgba(0,0,0,0.5);
-  display: block;
-  margin: 0 auto;
+/* Canvas confetti full screen */
+#confetti-canvas {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  z-index: 0;
 }
-
-/* Media queries untuk HP/tablet */
-@media only screen and (max-width: 768px) {
-  body {
-    background-size: cover;
-  }
-  #fontText {
-    font-size: 7vw;
-  }
-  input, button {
-    width: 95%;
-    font-size: 18px;
-    padding: 14px;
-  }
-  #page5 video {
-    height: 60vh;
-  }
-}
-
 
   </style>
 </head>
