--- a/index.html
+++ b/index.html
@@ -2,122 +2,112 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8">
-  <title>Skinnywirs © 2025</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Ucapan Ulang Tahun</title>
   <style>
-    /* Meta viewport di <head> */
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: Arial, sans-serif;
+      background: url("bg.jpg") no-repeat center center fixed;
+      background-size: cover;
+      overflow-x: hidden;
+    }
 
-body {
-  margin: 0;
-  padding: 0;
-  font-family: Arial, sans-serif;
+    .page {
+      display: none;
+      text-align: center;
+      width: 100%;
+      max-width: 420px; /* Lebar pas HP portrait */
+      margin: 0 auto;
+      padding: 20px;
+      box-sizing: border-box;
+    }
 
-  background: url("bg.jpg") no-repeat center center fixed;
-  background-size: cover;
+    .page.active { display: block; }
 
-  overflow-x: hidden;
-}
+    input, button {
+      width: 90%;
+      max-width: 380px;
+      padding: 12px;
+      margin-top: 15px;
+      font-size: 16px;
+      border-radius: 8px;
+      border: none;
+    }
 
-.page {
-  display: none;
-  text-align: center;
-  width: 100%;
-  max-width: 420px; /* Lebar HP portrait */
-  margin: 0 auto;
-  padding: 20px;
-  box-sizing: border-box;
-}
+    button {
+      background-color: #6c5ce7;
+      color: white;
+      cursor: pointer;
+    }
+    button:hover { background-color: #341f97; }
 
-.page.active {
-  display: block;
-}
+    #fontText {
+      font-size: 6vw; /* responsif di HP */
+      font-weight: bold;
+      transition: font-family 0.2s ease-in-out, color 0.2s ease-in-out;
+    }
 
-input, button {
-  width: 90%;
-  max-width: 380px;
-  padding: 12px;
-  margin-top: 15px;
-  font-size: 16px;
-  border-radius: 8px;
-  border: none;
-}
+    #page5 video {
+      width: auto;
+      height: 75vh;
+      max-height: 80vh;
+      border-radius: 16px;
+      display: block;
+      margin: 0 auto;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.3);
+    }
 
-button {
-  background-color: #6c5ce7;
-  color: white;
-  cursor: pointer;
-}
+    /* Tablet */
+    @media only screen and (min-width: 421px) and (max-width: 768px) {
+      #fontText { font-size: 5vw; }
+      #page5 video { height: 70vh; }
+    }
 
-button:hover {
-  background-color: #341f97;
-}
+    /* Desktop */
+    @media only screen and (min-width: 769px) {
+      #fontText { font-size: 28px; }
+      #page5 video { height: 60vh; }
+    }
 
-/* Font animasi */
-#fontText {
-  font-size: 6vw;  /* responsive mengikuti lebar layar */
-  font-weight: bold;
-  transition: font-family 0.2s ease-in-out, color 0.2s ease-in-out;
-}
-
-/* Video portrait 9:16 */
-#page5 video {
-  width: auto;
-  height: 75vh;
-  max-height: 80vh;
-  border-radius: 16px;
-  display: block;
-  margin: 0 auto;
-  box-shadow: 0 4px 15px rgba(0,0,0,0.3);
-}
-
-/* Responsive untuk tablet */
-@media only screen and (min-width: 421px) and (max-width: 768px) {
-  #fontText { font-size: 5vw; }
-  #page5 video { height: 70vh; }
-}
-
-/* Responsive untuk desktop */
-@media only screen and (min-width: 769px) {
-  #fontText { font-size: 28px; }
-  #page5 video { height: 60vh; }
-}
-
+    canvas {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 50%; /* hanya setengah layar */
+      pointer-events: none;
+    }
   </style>
 </head>
-
 <body>
-  <!-- Halaman 1 -->
+
+  <!-- Halaman 1: Input Nama -->
   <div id="page1" class="page active">
-    <h2>atas nama siapa kak?</h2>
-    <input type="text" id="nama" placeholder="...">
+    <h2>Masukkan Nama Kamu</h2>
+    <input type="text" id="nama" placeholder="Nama kamu...">
     <br>
-    <button onclick="goToPage2()">Kirim</button>
+    <button onclick="simpanNama()">Lanjut</button>
   </div>
 
-  <!-- Halaman 2 -->
+  <!-- Halaman 2: Password -->
   <div id="page2" class="page">
-    <h2 id="greeting"></h2>
-    <p>(10×2)+1−2+3</p>
+    <h2>(10×2)+1−2+3</h2>
     <input type="password" id="sandi" placeholder="...">
     <br>
-    <button onclick="checkPassword()">Kirim</button>
+    <button onclick="cekSandi()">Kirim</button>
   </div>
 
-  <!-- Halaman 3 -->
+  <!-- Halaman 3: Pesan -->
   <div id="page3" class="page">
-    <h2 id="fontText">ada pesan untukmu, <span id="namaPesan"></span></h2>
+    <h2 id="fontText">Ada pesan untukmu</h2>
+    <h3 id="namaPesan"></h3>
     <button onclick="nextPage(4)">Lanjut</button>
   </div>
 
-  <!-- Halaman 4 -->
+  <!-- Halaman 4: Ucapan -->
   <div id="page4" class="page">
-    <h1>22 September</h1>
-    <h2>Happy Birthday Sep!</h2>
-    <p>panjang umur yaa, sehat selalu, murah rezekii, makin cantik dan chubby hehe, semoga segera wisuda </p>
-    <p>diberkati Tuhan km dan juga keluarga duu, apapun yg km doakan sekarang semoga di kabulkan Tuhan yaa</p>
-    <p>semoga dapat cowokk wkwk, selalu jadi alayy yaa, biar bisa di undang ke vindes trus ketemu vincent rompies wkwk</p>
-    <p>jgn lupakan teman du yg ganteng, cool, keren dan ga alay ini yaa hehe.</p>
-    <p>Bahagia selaluuu seppp, selalu bersyukur yaa. Sekali lagi selamatt ulang tahun Tuhan memberkatimuuuu💫💫</p>
+    <h1>🎉 Selamat Ulang Tahun 🎂</h1>
+    <p>Semoga panjang umur, sehat selalu, dan penuh kebahagiaan!</p>
     <button onclick="nextPage(5)">Lanjut</button>
     <canvas id="confetti-canvas"></canvas>
     <audio id="music" autoplay loop>
@@ -125,143 +115,115 @@ button:hover {
     </audio>
   </div>
 
-  <!-- Halaman 5 -->
+  <!-- Halaman 5: Video -->
   <div id="page5" class="page">
-    <h2>Galeri Video 🎥</h2>
-    <video autoplay muted loop>
+    <h2>Pesan Khusus Untukmu 🎥</h2>
+    <video controls autoplay>
       <source src="video.mp4" type="video/mp4">
-      Browser kamu tidak mendukung video.
+      Browsermu tidak mendukung video.
     </video>
   </div>
 
-  <!-- Script -->
-  <script>
-    function goToPage2() {
-      const nama = document.getElementById("nama").value.trim();
-      if (nama === "") {
-        alert("Nama tidak boleh kosong!");
-        return;
-      }
+<script>
+  // Simpan nama
+  function simpanNama() {
+    const nama = document.getElementById("nama").value;
+    if (nama.trim() !== "") {
       localStorage.setItem("namaUser", nama);
-      document.querySelectorAll('.page').forEach(p => p.classList.remove('active'));
-      document.getElementById('page2').classList.add('active');
-      document.getElementById("greeting").innerText = "uceiii " + nama + "!!";
+      nextPage(2);
+    } else {
+      alert("Masukkan nama dulu ya 😊");
     }
-
-    function checkPassword() {
-      const sandi = document.getElementById("sandi").value;
-      if (sandi === "22") {
-        nextPage(3);
-      } else {
-        alert("⚠️ Kata sandi salah, coba lagi!");
-      }
-    }
-
-    // Font loop di halaman 3
-    let fontInterval;
-    function startFontLoop() {
-      const fonts = ["Arial", "Verdana", "Courier New", "Georgia", "Comic Sans MS", "Impact", "Tahoma", "Trebuchet MS"];
-      const colors = ["#d63031", "#0984e3", "#00b894", "#fdcb6e", "#6c5ce7", "#e84393"];
-      const fontEl = document.getElementById("fontText");
-      let fontIndex = 0;
-
-      if (fontInterval) clearInterval(fontInterval);
-
-      fontInterval = setInterval(() => {
-        fontIndex = (fontIndex + 1) % fonts.length;
-        fontEl.style.fontFamily = fonts[fontIndex];
-        fontEl.style.color = colors[Math.floor(Math.random() * colors.length)];
-      }, 400);
-    }
-
-    // Navigasi antar halaman
-    function nextPage(num) {
-      document.querySelectorAll('.page').forEach(p => p.classList.remove('active'));
-      document.getElementById('page' + num).classList.add('active');
-
-      if (num === 3) {
-        const namaUser = localStorage.getItem("namaUser") || "";
-        document.getElementById("namaPesan").innerText = namaUser;
-        startFontLoop();
-      }
-
-      if (num === 4) {
-        let music = document.getElementById("music");
-        music.play().catch(()=>{});
-        startConfetti();
-      }
-    }
-
-    // Confetti di halaman 4 (hanya setengah layar)
-    function startConfetti() {
-  const canvas = document.getElementById("confetti-canvas");
-  const ctx = canvas.getContext("2d");
-  canvas.width = window.innerWidth;
-  canvas.height = window.innerHeight;
-
-  const confettis = [];
-  const colors = ["#ff7675", "#74b9ff", "#55efc4", "#ffeaa7", "#fd79a8", "#a29bfe"];
-
-  for (let i = 0; i < 120; i++) { // jumlah confetti (bisa ditambah/dikurangi)
-    confettis.push({
-      x: Math.random() * canvas.width,
-      y: Math.random() * canvas.height - canvas.height,
-      size: 2 + Math.random() * 4, // <<< ukuran lebih kecil
-      color: colors[Math.floor(Math.random() * colors.length)],
-      speedY: 2 + Math.random() * 3,
-      speedX: (Math.random() - 0.5) * 2,
-      rotation: Math.random() * 360,
-      rotationSpeed: (Math.random() - 0.5) * 10
-    });
   }
 
-  function drawConfetti(c) {
-    ctx.save();
-    ctx.translate(c.x, c.y);
-    ctx.rotate(c.rotation * Math.PI / 180);
-    ctx.fillStyle = c.color;
-    ctx.fillRect(-c.size/2, -c.size/2, c.size, c.size);
-    ctx.restore();
+  // Cek sandi
+  function cekSandi() {
+    const sandi = document.getElementById("sandi").value;
+    if (sandi === "22") {
+      nextPage(3);
+    } else {
+      alert("Sandi salah, coba lagi!");
+    }
   }
 
-  function animate() {
-    ctx.clearRect(0, 0, canvas.width, canvas.height);
-    for (let c of confettis) {
-      c.y += c.speedY;
-      c.x += c.speedX;
-      c.rotation += c.rotationSpeed;
-
-      // hanya sampai setengah layar
-      if (c.y > canvas.height / 2) {
-        c.y = -10;
-        c.x = Math.random() * canvas.width;
-      }
-
-      drawConfetti(c);
-    }
-    requestAnimationFrame(animate);
+  // Animasi font pesan
+  const fonts = ["Arial", "Georgia", "Courier New", "Verdana", "Comic Sans MS"];
+  let fontIndex = 0;
+  function startFontLoop() {
+    setInterval(() => {
+      const el = document.getElementById("fontText");
+      el.style.fontFamily = fonts[fontIndex % fonts.length];
+      el.style.color = ["red","blue","green","purple","orange"][fontIndex % 5];
+      fontIndex++;
+    }, 700);
   }
-  animate();
-}
 
-  </script>
+  // Confetti bintang
+  function startConfetti() {
+    const canvas = document.getElementById("confetti-canvas");
+    const ctx = canvas.getContext("2d");
+    canvas.width = window.innerWidth;
+    canvas.height = window.innerHeight / 2; // setengah layar
 
-  <style>
-    .page {
-      display: none;
-      text-align: center;
-      margin-top: 50px;
+    let stars = [];
+    for (let i = 0; i < 80; i++) {
+      stars.push({
+        x: Math.random() * canvas.width,
+        y: Math.random() * canvas.height,
+        size: Math.random() * 3 + 2,
+        speed: Math.random() * 1 + 0.5
+      });
     }
-    .page.active {
-      display: block;
+
+    function drawStars() {
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      ctx.fillStyle = "yellow";
+      stars.forEach(star => {
+        ctx.beginPath();
+        ctx.arc(star.x, star.y, star.size, 0, Math.PI * 2);
+        ctx.fill();
+      });
     }
-    #confetti-canvas {
-      position: fixed;
-      top: 0;
-      left: 0;
-      pointer-events: none;
+
+    function updateStars() {
+      stars.forEach(star => {
+        star.y += star.speed;
+        if (star.y > canvas.height) {
+          star.y = 0;
+          star.x = Math.random() * canvas.width;
+        }
+      });
     }
-  </style>
+
+    function loop() {
+      drawStars();
+      updateStars();
+      requestAnimationFrame(loop);
+    }
+    loop();
+  }
+
+  // Navigasi halaman
+  function nextPage(num) {
+    const pages = document.querySelectorAll(".page");
+    pages.forEach(p => p.classList.remove("active"));
+    document.getElementById("page" + num).classList.add("active");
+
+    if (num === 3) {
+      const namaUser = localStorage.getItem("namaUser") || "";
+      document.getElementById("namaPesan").innerText = namaUser;
+      startFontLoop();
+    }
+
+    if (num === 4) {
+      startConfetti();
+      const music = document.getElementById("music");
+      music.play().catch(() => {
+        console.log("Autoplay musik diblokir, butuh interaksi user.");
+      });
+    }
+  }
+</script>
+
 </body>
-
 </html>
