--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
   <!-- Halaman 1: Input Nama -->
   <div id="page1" class="page active">
-    <h2>Masukkan Nama Kamu</h2>
+    <h2>atas nama siapa kak?</h2>
     <input type="text" id="nama" placeholder="Nama kamu...">
     <br>
     <button onclick="simpanNama()">Lanjut</button>
@@ -91,6 +91,7 @@
 
   <!-- Halaman 2: Password -->
   <div id="page2" class="page">
+    <h2>uceiii kak!</h2>
     <h2>(10×2)+1−2+3</h2>
     <input type="password" id="sandi" placeholder="...">
     <br>
@@ -99,15 +100,20 @@
 
   <!-- Halaman 3: Pesan -->
   <div id="page3" class="page">
-    <h2 id="fontText">Ada pesan untukmu</h2>
-    <h3 id="namaPesan"></h3>
+    <h2 id="fontText">ada pesan untukmu</h2>
+    <h3 id="namaPesan">wa</h3>
     <button onclick="nextPage(4)">Lanjut</button>
   </div>
 
   <!-- Halaman 4: Ucapan -->
   <div id="page4" class="page">
-    <h1>🎉 Selamat Ulang Tahun 🎂</h1>
-    <p>Semoga panjang umur, sehat selalu, dan penuh kebahagiaan!</p>
+    <h1>22 September</h1>
+     <h2>Happy Birthday Sep!</h2>
+    <p>panjang umur yaa, sehat selalu, murah rezekii, makin cantik dan chubby hehe, semoga segera wisuda dan mendapat kerjaan yg km inginkan,</p>
+    <p>diberkati Tuhan km dan juga keluarga duu, apapun yg km doakan sekarang semoga di kabulkan Tuhan yaa,</p>
+    <p>semoga dapat cowokk wkwk, selalu jadi alayy yaa, biar bisa di undang ke vindes trus ketemu vincent rompies wkwk</p>
+    <p>jgn lupakan teman du yg ganteng, cool, keren dan ga alay ini yaa hehe.</p>
+    <p>Bahagia selaluuu seppp, selalu bersyukur yaa. Sekali lagi selamatt ulang tahun Tuhan memberkatimuuuu💫💫</p>
     <button onclick="nextPage(5)">Lanjut</button>
     <canvas id="confetti-canvas"></canvas>
     <audio id="music" autoplay loop>
