--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       margin: 0;
       padding: 0;
       font-family: Arial, sans-serif;
-      background: url("https://www.freepik.com/free-ai-image/digital-art-style-sky-landscape-with-moon_137492151.htm#fromView=keyword&page=1&position=0&uuid=62fd1c46-4627-459e-892a-073150c47782&query=Aesthetic+phone+wallpaper") no-repeat center center fixed;
+      background: url("https://getwallpapers.com/wallpaper/full/6/3/6/1293083-widescreen-stars-hd-wallpapers-1920x1080.jpg") no-repeat center center fixed;
       background-size: cover;
       overflow-x: hidden;
     }
