--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       margin: 0;
       padding: 0;
       font-family: Arial, sans-serif;
-      background: url("https://getwallpapers.com/wallpaper/full/6/3/6/1293083-widescreen-stars-hd-wallpapers-1920x1080.jpg") no-repeat center center fixed;
+      background: url("quality_restoration_20250918175609164.jpg") no-repeat center center fixed;
       background-size: cover;
       overflow-x: hidden;
     }
