--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
   <div id="page4" class="page">
     <h1>22 September</h1>
     <h2>Happy Birthday Sep!</h2>
-    <p>panjang umur yaa, sehat selalu, murah rezekii, makin cantik dan chubby hehe, semoga segera wisuda dan mendapat kerjaan yg km inginkan,</p>
+    <p>panjang umur yaa, sehat selalu, murah rezekii, makin cantik dan chubby hehe, semoga segera wisuda dan dapat pekerjaan sesuai dengan yg km inginkan,</p>
     <p>diberkati Tuhan km dan juga keluarga duu, apapun yg km doakan sekarang semoga di kabulkan Tuhan yaa,</p>
     <p>semoga dapat cowokk wkwk, selalu jadi alayy yaa, biar bisa di undang ke vindes trus ketemu vincent rompies wkwk</p>
     <p>jgn lupakan teman du yg ganteng, cool, keren dan ga alay ini yaa hehe.</p>
