--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
   <!-- Halaman 2: Password -->
   <div id="page2" class="page">
-    <h2>uceiii kak!</h2>
+    <h2>pemanasan otak dulu ya kak!</h2>
     <h2>(10×2)+1−2+3</h2>
     <input type="password" id="sandi" placeholder="...">
     <br>
