--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     <p>panjang umur yaa, sehat selalu, murah rezekii, makin cantik dan chubby hehe, semoga segera wisuda dan dapat pekerjaan sesuai dengan yg km inginkan,</p>
     <p>diberkati Tuhan km dan juga keluarga duu, apapun yg km doakan sekarang semoga di kabulkan Tuhan yaa,</p>
     <p>semoga dapat cowokk wkwk, selalu jadi alayy yaa, biar bisa di undang ke vindes trus ketemu vincent rompies wkwk</p>
-    <p>jgn lupakan teman du yg ganteng, cool, keren dan ga alay ini yaa hehe.</p>
+    <p>jgn lupakan teman du yg keren, cool, dan ga alay ini yaa hehe.</p>
     <p>Bahagia selaluuu seppp, selalu bersyukur yaa. Sekali lagi selamatt ulang tahun Tuhan memberkatimuuuu💫💫</p>
     <button onclick="nextPage(5)">Lanjut</button>
     <canvas id="confetti-canvas"></canvas>
